// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="APIComponent-root-109"
>
  <header
    className="MuiPaper-root-125 MuiPaper-elevation4-131 MuiAppBar-root-117 MuiAppBar-positionFixed-118 MuiAppBar-colorPrimary-123 mui-fixed"
  >
    <div
      className="MuiToolbar-root-152 MuiToolbar-regular-154 MuiToolbar-gutters-153 APIComponent-nowrap-111"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-162 MuiIconButton-root-156 MuiIconButton-colorInherit-157 APIComponent-menuButton-112"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-161"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-165"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-172"
        />
      </button>
      <h2
        className="MuiTypography-root-179 MuiTypography-title-185 MuiTypography-colorInherit-198 APIComponent-flex-110"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="APIComponent-spacer-114"
  />
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="APIComponent-root-109"
>
  <header
    className="MuiPaper-root-125 MuiPaper-elevation4-131 MuiAppBar-root-117 MuiAppBar-positionStatic-121 MuiAppBar-colorPrimary-123"
  >
    <div
      className="MuiToolbar-root-152 MuiToolbar-regular-154 MuiToolbar-gutters-153 APIComponent-nowrap-111"
    >
      <button
        aria-label="Menu"
        className="MuiButtonBase-root-162 MuiIconButton-root-156 MuiIconButton-colorInherit-157 APIComponent-menuButton-112"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-161"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-165"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-172"
        />
      </button>
      <h2
        className="MuiTypography-root-179 MuiTypography-title-185 MuiTypography-colorInherit-198 APIComponent-flex-110"
      >
        Point Pods
      </h2>
    </div>
  </header>
  <div
    className="APIComponent-pad-115"
  />
</div>
`;

exports[`matches the prior snapshot 3`] = `
<div
  className="APIComponent-root-109"
>
  <header
    className="MuiPaper-root-125 MuiPaper-elevation4-131 MuiAppBar-root-117 MuiAppBar-positionFixed-118 MuiAppBar-colorPrimary-123 mui-fixed"
  >
    <div
      className="MuiToolbar-root-152 MuiToolbar-regular-154 MuiToolbar-gutters-153 APIComponent-nowrap-111"
    >
      <button
        aria-label="Back"
        className="MuiButtonBase-root-162 MuiIconButton-root-156 MuiIconButton-colorInherit-157 APIComponent-menuButton-112"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-161"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-165"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-172"
        />
      </button>
      <h2
        className="MuiTypography-root-179 MuiTypography-title-185 MuiTypography-colorInherit-198 APIComponent-flex-110"
      >
        Test
      </h2>
      <div>
        <button>
          test
        </button>
      </div>
    </div>
  </header>
  <div
    className="APIComponent-spacer-114"
  />
</div>
`;
